<resources>

    <string name="app_name">HabitTrack</string>

    <!-- about detail page -->
    <string name="detail_title_goal">Goal :</string>
    <string name="detail_title_description">Description :</string>
    <string name="detail_default_description">Add some description by click the edit button.</string>

    <!-- goal type -->
    <string name="goal_everyday">Everyday</string>

    <!-- Newhabit -->
    
    <string name="newHabit_title">New Habit</string>
    <string name="newHabit_newHabitName">New Habit Name</string>
    <string name="newHabit_planTitle">Plan: </string>
    <string name="newHabit_planContent_type_fixed">Fixed</string>
    <string name="newHabit_planContent_type_flexible">Flexible</string>
    <string name="newHabit_planeContent_dayPer">day(s) per</string>
   	<string name="newHabit_goalTitle">Goal: </string>
   	<string name="newHabit_goalUnits">times.</string>
   	<string name="newHabit_description">Description: </string>

    <!-- Weekday names -->
    <string name="weekday_letter_sunday">S</string>
    <string name="weekday_letter_monday">M</string>
    <string name="weekday_letter_tuesday">T</string>
    <string name="weekday_letter_wednesday">W</string>
    <string name="weekday_letter_thursday">T</string>
    <string name="weekday_letter_friday">F</string>
    <string name="weekday_letter_saturday">S</string>
    
    
    <!-- period units  -->
	<string name="period_unit_month">Mon.</string>
	<string name="period_unit_week">Week</string>
	<string name="period_unit_year">Year</string>
	
	
	<!-- others -->
	<string name="unnamed_habit">Unnamed habit</string>
</resources>